[gd_scene load_steps=54 format=2]

[ext_resource path="res://res/oak_woods_v1.0/character/char_blue.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 0, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 56, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 112, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 168, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 224, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 280, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 0, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 56, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 112, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 168, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 224, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 280, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 0, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 56, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 112, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 168, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 224, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 280, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 336, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 392, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 0, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 56, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 112, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 168, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 224, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 280, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 336, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 392, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 0, 336, 56, 56 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 56, 336, 56, 56 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 112, 336, 56, 56 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 168, 336, 56, 56 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 112, 56, 56, 56 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 168, 56, 56, 56 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 224, 56, 56, 56 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 280, 56, 56, 56 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 168, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 224, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 280, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 336, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 392, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 56, 56 )

[sub_resource type="SpriteFrames" id=46]
animations = [ {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": false,
"name": "damage",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "fall",
"speed": 10.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=47]
radius = 25.0
height = 48.0

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 36.375, 14.5 )

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 36.375, 14.5 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
scale = Vector2( 3, 3 )
frames = SubResource( 46 )
animation = "attack"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 23 )
shape = SubResource( 47 )

[node name="attackRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackRight"]
position = Vector2( 63, 19 )
shape = SubResource( 48 )

[node name="attackLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackLeft"]
position = Vector2( -63, 19 )
shape = SubResource( 49 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="attackRight" to="." method="_on_attackRight_body_entered"]
[connection signal="body_entered" from="attackLeft" to="." method="_on_attackLeft_body_entered"]
